--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 cfgv==3.4.0
 distlib==0.3.8
 Django==4.2.14
+djangorestframework==3.15.2
 factory-boy==3.3.0
 Faker==25.9.2
 fakeredis==2.23.3
@@ -15,6 +16,8 @@ packaging==24.1
 platformdirs==4.2.2
 pluggy==1.5.0
 pre-commit==3.6.0
+psycopg-binary==3.2.1
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pytest==8.2.1
 pytest-django==4.8.0
