--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,12 @@ inflection==0.5.1
 iniconfig==2.0.0
 nodeenv==1.9.1
 packaging==24.1
+pillow==10.4.0
 platformdirs==4.2.2
 pluggy==1.5.0
 pre-commit==3.6.0
+psycopg-binary==3.2.1
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 pytest==8.2.1
 pytest-django==4.8.0
