--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.8.1
+attrs==23.2.0
 cfgv==3.4.0
 distlib==0.3.8
 Django==4.2.14
 django-resized==1.0.2
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+drf-spectacular==0.27.2
 factory-boy==3.3.0
 Faker==25.9.2
 fakeredis==2.23.3
@@ -13,6 +15,8 @@ gunicorn==22.0.0
 identify==2.6.0
 inflection==0.5.1
 iniconfig==2.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 nodeenv==1.9.1
 packaging==24.1
 pillow==10.4.0
@@ -32,8 +36,11 @@ python-dateutil==2.9.0.post0
 python-decouple==3.8
 PyYAML==6.0.1
 redis==5.0.7
+referencing==0.35.1
+rpds-py==0.19.1
 six==1.16.0
 sortedcontainers==2.4.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+uritemplate==4.1.1
 virtualenv==20.26.3
