--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,9 @@ DB_PORT=5432
 REDIS_HOST=medium_redis_host  
 REDIS_PORT=6379
 REDIS_DB=1
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USE_TLS=True
+EMAIL_PORT=587
+EMAIL_HOST_USER=sizning_emailingiz@gmail.com
+EMAIL_HOST_PASSWORD=app_passworddan_olgan_parolingiz
