--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ inflection==0.5.1
 iniconfig==2.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+loguru==0.7.2
 nodeenv==1.9.1
 packaging==24.1
 pillow==10.4.0
