--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ DB_USER=medium_user
 DB_PASSWORD=medium_user_password
 DB_HOST=medium_db_host
 DB_PORT=5432
-REDIS_HOST=medium_redis_host  
+REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=1
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
