--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,8 @@ services:
       - .env.example
     expose:
       - "6379"
+    ports:
+      - "6379:6379"
     restart: always
     networks:
        - medium_network
