--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
       - .env.example
     expose:
       - "5432"
+    ports:
+      - "5432:5432"
     environment:
       - POSTGRES_USER=${DB_USER-medium_user}
       - POSTGRES_PASSWORD=${DB_PASSWORD-medium_user_password}
